--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
-.App {
-  text-align: center;
+.App-banner {
+  text-align: justify;
+  height: 20vh;
+  font-size: 10vh;
+  justify-content: center;
 }
 
-.App-header {
+.App-main {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
