--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,11 @@
 .App-banner {
-  text-align: justify;
-  height: 20vh;
-  font-size: 10vh;
+  text-align: center;
+  width:100%;
+  display:flex;
+  padding: 3vh;
+  font-size: 8vh;
   justify-content: center;
+  background-color: lime;
 }
 
 .App-main {
@@ -12,5 +15,4 @@
   flex-direction: column;
   align-items: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
