--- a/src/components/assets/Sheet.scss
+++ b/src/components/assets/Sheet.scss
@@ -20,6 +20,9 @@ button:active {
   background-color: white;
 }
 
+.Sheet-main {
+  min-width: 40vh;
+}
 .data-body {
   color: cyan;
   border-style: solid;
