Chore: API call setup/test writing in progress

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
   padding: 3vh;
   font-size: 8vh;
   justify-content: center;
-  background-color: lime;
+  background-color: magenta;
 }
 
 .App-main {
