--- a/src/components/assets/Sheet.scss
+++ b/src/components/assets/Sheet.scss
@@ -1,3 +1,6 @@
+$primaryColour: magenta;
+$secondaryColour: cyan;
+
 .data-body {
 overflow-y: auto;
 min-height: 20vh;
@@ -9,7 +12,7 @@ min-height: 20vh;
 
 button {
   border: none;
-  background-color: lime;
+  background-color: $primaryColour;
   border-radius: 2px;
   width: 50%;
   height: 5vh;
@@ -24,9 +27,9 @@ button:active {
   min-width: 40vh;
 }
 .data-body {
-  color: cyan;
+  color:$secondaryColour;
   border-style: solid;
   border-width: 5px;
-  border-color: lime;
+  border-color: $primaryColour;
   border-radius: 0px 0px 20px 20px;
 }
