--- a/src/components/assets/Sheet.scss
+++ b/src/components/assets/Sheet.scss
@@ -7,7 +7,8 @@ min-height: 20vh;
 }
 
 .button-panel {
-  display: flex;
+display: flex;
+flex-direction: row;
 }
 
 button {
@@ -24,12 +25,13 @@ button:active {
 }
 
 .Sheet-main {
-  min-width: 40vh;
+  min-width: 44vh;
 }
 .data-body {
   color:$secondaryColour;
+  min-height: 30vh;
   border-style: solid;
-  border-width: 5px;
+  border-width: 4px;
   border-color: $primaryColour;
   border-radius: 0px 0px 20px 20px;
 }
