--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,21 @@
+@import "components/assets/colours.scss";
+
 .App-banner {
   text-align: center;
   padding: 3vh;
   font-size: 8vh;
-  background-color: magenta;
+  background-color: $primary;
 }
 
 .App-body {
-  min-width: 100%;
+  min-width: 100vw;
   background-color: #282c34;
   min-height: 100vh;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(5px + 2vmin);
 }
 
 .App-main {
-display:flex;
-flex-direction: column;
-align-items: center;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
