--- a/src/components/assets/Imageport.scss
+++ b/src/components/assets/Imageport.scss
@@ -1,12 +1,17 @@
+@import "./_colours.scss";
+
 .Image-port {
-  min-width: 43vh;
+  min-width: 44vw;
   border-style: solid;
-  border-color: magenta;
-  border-width: 4px;
+  border-color: $primary;
+  border-width: 10px;
+  border-radius: 0px 0px 5px 5px;
   display: flex;
   justify-content: center;
 }
 
 img {
-  width:100%;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
