--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@
 
 .App-body {
   min-width: 100vw;
-  background-color: #282c34;
+  background: $background;
   min-height: 100vh;
   font-size: calc(5px + 2vmin);
 }
